[SCB-2813]fix ak/sk and rbac problems (#4096)